<resources>
    <string name="app_name">75FCodingAssignment</string>
    <string name="hello">Choose from the options to check your environment</string>
    <string name="ambient_label">Ambient Temperature</string>
    <string name="light_label">Light</string>
    <string name="pressure_label">Pressure</string>
    <string name="text_placeholder">-</string>
    <string name="send_label">Send Data To Server</string>
    <string name="humidity_label">Relative Humidity</string>
</resources>
